# document_parser

./: .gitignore  README.md  pyproject.toml
.claude/skills/shared/: vault-conventions.md
.claude/skills/vault-build/: SKILL.md
.claude/skills/vault-from-handwriting/: SKILL.md
.claude/skills/vault-from-marker/: SKILL.md
.claude/skills/vault-from-ocr/: SKILL.md
skills/shared/: vault-conventions.md
skills/vault-builder/: SKILL.md
skills/vault-from-handwriting/: SKILL.md
skills/vault-from-marker/: SKILL.md
skills/vault-from-ocr/: SKILL.md
src/document_parser/: __init__.py  batch.py  cli.py  device.py  engine.py  extractor.py  jobs.py  parser.py  server.py  terminals.py  vault.py  webapp.py
src/document_parser/models/: __init__.py  got_ocr2.py  marker.py  qwen_vl.py
tests/: test_batch.py  test_extractor_images.py  test_marker_backend.py  test_terminals.py  test_vault_index.py  test_webapp.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css
web/src/pages/: ClassPage.tsx  Library.tsx  Review.tsx  Vaultify.tsx
