[project]
name = "document-parser"
version = "0.1.0"
description = "Handwriting-aware PDF/image OCR service with pluggable HuggingFace model backends"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.1",
    "transformers>=4.46",
    "Pillow>=10.0",
    "PyMuPDF>=1.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "python-multipart>=0.0.9",
    "qwen-vl-utils>=0.0.8",
    "accelerate>=0.34",
    "torchvision>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
docparse = "document_parser.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/document_parser"]

[tool.ruff]
line-length = 100
target-version = "py310"
